dataset1235/2025-2/2868285114/users/2008605748/executions/3071719669_1092214117.log
== RUN (2025-08-28 22:47:15)
-- CODE: 
valor = 9.80
taxa = 20.00
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:46:33)
-- CODE: 
valor = 9.80
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:56:35)
-- CODE: 
praca =(input(""))
valor = 9.80
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:59:19)
-- CODE: 
praca =int(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:56:06)
-- CODE: 
praca = int(input(""))
valor = float(9.80
taxa = 20.00
aume
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 23:02:14)
-- CODE: 
praca = int(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
valor_total = round(valor_total, 2)
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1.15
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1.15
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
1.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
1.15
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:06:44)
-- CODE: 
praca = int(input())
total_sem_imposto = (praca * 9.80) + 20
total_final = total_sem_imposto * 1.15
print(round(total_final, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
56.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
34.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
79.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
124.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
45.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:47:16)
-- CODE: 
valor = 9.80
taxa = 20.00
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 23:06:43)
-- CODE: 
praca = int(input())
total_sem_imposto = (praca * 9.80) + 20
total_final = total_sem_imposto * 1.15
print(round(total_final, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
56.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
34.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
79.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
124.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
45.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:01:30)
-- CODE: 
praca = int(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
valor_total = round(valor_total, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:56:21)
-- CODE: 
praca =(input(""))
valor =
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
File "XXXX", line 2
    valor =
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
File "XXXX", line 2
    valor =
           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
File "XXXX", line 2
    valor =
           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
File "XXXX", line 2
    valor =
           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
File "XXXX", line 2
    valor =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 23:01:29)
-- CODE: 
praca = int(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
valor_total = round(valor_total, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:59:51)
-- CODE: 
praca = int(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:57:52)
-- CODE: 
praca =(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:46:29)
-- CODE: 
valor = 9.80
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:47:18)
-- CODE: 
valor = 9.80
taxa = 20.00
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:59:16)
-- CODE: 
praca =int(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 23:05:33)
-- CODE: 
praca = int(input())
total_sem_imposto = (praca * 9.80) + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:07)
-- CODE: 
praca = int(input(""))
valor = float(9.80
taxa = 20.00
aume
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
File "XXXX", line 2
    valor = float(9.80
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:46:30)
-- CODE: 
valor = 9.80
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:57:51)
-- CODE: 
praca =(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:58:44)
-- CODE: 
praca =(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:57:50)
-- CODE: 
praca =(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:47:15)
-- CODE: 
valor = 9.80
taxa = 20.00
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:58:43)
-- CODE: 
praca =(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:57:53)
-- CODE: 
praca =(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_total
NameError: name 'valor_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:59:50)
-- CODE: 
praca = int(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
None
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
None
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
None
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:02:15)
-- CODE: 
praca = int(input(""))
valor = 9.80
taxa_fixa = 20.00
valor_total = 1.15
valor_total = round(valor_total, 2)
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1.15
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1.15
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
1.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
1.15
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
